kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ubuntu
spec:
  selector:
    app: ubuntu
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376
